// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientList render snapshot 1`] = `
<div
  className="content-wrapper content"
>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    <button
      className="btn btn-lg btn-success"
    >
      Create Client
      ...
    </button>
  </a>
  <div
    className="list-group"
  >
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa fa-server fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo
          </h4>
          <p
            className="list-group-item-text"
          >
            bar
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa fa-server fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo1
          </h4>
          <p
            className="list-group-item-text"
          >
            bar1
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
  </div>
</div>
`;

exports[`List render snapshot 1`] = `
<div
  className="content-wrapper content"
>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    <button
      className="btn btn-lg btn-success"
    >
      ...
    </button>
  </a>
  <div
    className="list-group"
  >
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa undefined fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo
          </h4>
          <p
            className="list-group-item-text"
          >
            bar
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa undefined fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo1
          </h4>
          <p
            className="list-group-item-text"
          >
            bar1
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa undefined fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo2
          </h4>
          <p
            className="list-group-item-text"
          >
            bar2
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
  </div>
</div>
`;

exports[`MaterialForm render snapshot 1`] = `
<div
  className="well bs-component col-md-6"
>
  <form
    className="form-horizontal"
    onSubmit={undefined}
  >
    <fieldset>
      <legend>
        Create sth
      </legend>
    </fieldset>
    <div
      className="form-group"
    >
      <label
        className="col-md-2 control-label"
      >
        Username
      </label>
      <div
        className="col-md-10"
      >
        <input
          className="form-control"
          name="username"
          onChange={[Function]}
          placeholder="Username..."
          required={true}
          type="text"
          value="foo"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="col-md-2 control-label"
      >
        Redirect Uri
      </label>
      <div
        className="col-md-10"
      >
        <input
          className="form-control"
          name="redirectUri"
          onChange={[Function]}
          placeholder="http://example.com"
          required={true}
          type="text"
          value="http://bar.com"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <div
        className="col-md-10 col-md-offset-2"
      >
        <a
          onClick={[Function]}
          style={Object {}}
        >
          <button
            className="btn btn-default"
            type="button"
          >
            Cancel
          </button>
        </a>
        <button
          className="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Notifications render snapshot 1`] = `
<div
  style={
    Object {
      "bottom": -120,
      "left": "20px",
      "opacity": 0,
      "position": "fixed",
      "zIndex": 99999,
    }
  }
>
  <div
    className="alert alert-danger"
    onClick={undefined}
    style={
      Object {
        "borderRadius": "4px",
        "clear": "both",
        "color": "rgba(255,255,255, 0.84)",
        "cursor": "pointer",
        "fontSize": "14px",
        "marginBottom": "10px",
        "maxWidth": "568px",
        "minWidth": "288px",
        "overflow": "hidden",
        "padding": "15px",
      }
    }
  >
    <span>
      foo
    </span>
  </div>
  <div
    className="alert alert-warning"
    onClick={undefined}
    style={
      Object {
        "borderRadius": "4px",
        "clear": "both",
        "color": "rgba(255,255,255, 0.84)",
        "cursor": "pointer",
        "fontSize": "14px",
        "marginBottom": "10px",
        "maxWidth": "568px",
        "minWidth": "288px",
        "overflow": "hidden",
        "padding": "15px",
      }
    }
  >
    <span>
      bar
    </span>
  </div>
</div>
`;

exports[`PortalHeader render snapshot 1`] = `
<header
  className="main-header"
>
  <nav
    className="navbar navbar-static-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          onClick={[Function]}
          style={Object {}}
        >
          Obsidian
        </a>
        <button
          className="navbar-toggle collapsed"
          data-target="#navbar-collapse"
          data-toggle="collapse"
          type="button"
        >
          <i
            className="fa fa-bars"
          />
        </button>
      </div>
      <div
        className="collapse navbar-collapse"
        id="navbar-collapse"
      >
        <ul
          className="nav navbar-nav"
        >
          <li>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Users
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Clients
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Scopes
            </a>
          </li>
          <li
            className="dropdown"
          >
            <a
              className="dropdown-toggle"
              data-toggle="dropdown"
              href="#"
            >
              Dropdown
              <span
                className="caret"
              />
            </a>
            <ul
              className="dropdown-menu"
              role="menu"
            >
              <li>
                <a
                  href="#"
                >
                  Action
                </a>
              </li>
              <li>
                <a
                  href="#"
                >
                  Another action
                </a>
              </li>
              <li>
                <a
                  href="#"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
              />
              <li>
                <a
                  href="#"
                >
                  Separated link
                </a>
              </li>
              <li
                className="divider"
              />
              <li>
                <a
                  href="#"
                >
                  One more separated link
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <form
          className="navbar-form navbar-left"
          role="search"
        >
          <div
            className="form-group"
          >
            <input
              className="form-control"
              id="navbar-search-input"
              name="filter"
              onChange={undefined}
              placeholder="Search"
              type="text"
              value={undefined}
            />
          </div>
        </form>
        <ul
          className="nav navbar-nav navbar-right"
        >
          <li
            className="dropdown user user-menu"
          >
            <a
              className="dropdown-toggle"
              data-toggle="dropdown"
              href="#"
            >
              <span
                className="hidden-xs"
              >
                Henry Chu
              </span>
            </a>
            <ul
              className="dropdown-menu "
            >
              <li
                style={
                  Object {
                    "background": "#EEE",
                    "color": "black",
                    "height": "200px",
                    "textAlign": "center",
                    "verticalAlign": "center",
                    "width": "400px",
                  }
                }
              >
                <h2>
                  Henry Chu
                   - 
                  Administrator
                  <br />
                  <small>
                    A real boss.
                  </small>
                </h2>
              </li>
              <li
                className="user-footer"
              >
                <div
                  className="pull-left"
                >
                  <a
                    className="btn btn-default btn-flat"
                    href="#"
                  >
                    Profile
                  </a>
                </div>
                <div
                  className="pull-right"
                >
                  <button
                    className="btn btn-default btn-flat"
                    onClick={[Function]}
                  >
                    Sign out
                  </button>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</header>
`;

exports[`PortalIndex render snapshot 1`] = `
<div
  className="content-wrapper"
  style={
    Object {
      "margin": "30px",
    }
  }
>
  <h1>
    Welcome to Obsidian Management Portal!
  </h1>
  <br />
  <h2>
    You can manage all the users, claims and clients here.
  </h2>
  <h2>
    Select what you need in the navigation bar.
  </h2>
</div>
`;

exports[`ScopeList render snapshot 1`] = `
<div
  className="content-wrapper content"
>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    <button
      className="btn btn-lg btn-success"
    >
      Create Scope
      ...
    </button>
  </a>
  <div
    className="list-group"
  >
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa fa-puzzle-piece fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo
          </h4>
          <p
            className="list-group-item-text"
          >
            bar
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa fa-puzzle-piece fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo1
          </h4>
          <p
            className="list-group-item-text"
          >
            bar1
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
  </div>
</div>
`;

exports[`UserList render snapshot 1`] = `
<div
  className="content-wrapper content"
>
  <a
    onClick={[Function]}
    style={Object {}}
  >
    <button
      className="btn btn-lg btn-success"
    >
      Create User
      ...
    </button>
  </a>
  <div
    className="list-group"
  >
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa fa-user fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo
          </h4>
          <p
            className="list-group-item-text"
          >
            bar
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
    <div>
      <div
        className="list-group-item"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="row-action-primary"
        >
          <i
            className="fa fa-user fa-2x"
          />
        </div>
        <div
          className="row-content"
        >
          <div
            className="least-content"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <button
                className="btn btn-lg btn-primary btn-raised"
              >
                Edit
              </button>
            </a>
          </div>
          <h4
            className="list-group-item-heading"
          >
            foo1
          </h4>
          <p
            className="list-group-item-text"
          >
            bar1
          </p>
        </div>
      </div>
      <div
        className="list-group-separator"
      />
    </div>
  </div>
</div>
`;
